Creating MaxIslandCount Algorithm on AdjacencyList Graph Datastructures

--- a/.gitignore
+++ b/.gitignore
@@ -1109,3 +1109,10 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 ################################################## IDE #############################################
+
+
+################################################## Custom ##########################################
+#Draw.io
+*.svg.*
+
+################################################## Custom ##########################################
